      GCC version [Luke Benstead == LB]
- *** Fixed GCC version detection in the environ script for some locales [LS]
- DC  Made it so that PVR register access is done through a volatile pointer,
      as it should be to ensure GCC doesn't mess with it any [LS]
- DC  Copy function data from maple device during hot-swap poll if already
      attached [Joe Fenton = JF]

KallistiOS version 2.0.0 -----------------------------------------------
- DC  Broadband Adapter driver fixes [Dan Potter == DP]
- *** Imported a new version of lwIP, with proper sockets lib [DP]
- DC  Added new httpd example for lwIP [DP]
- x86 Added incomplete ia32 port [DP]
- DC  Added new DC examples for Parallax (raster_melt, sinus, delay_cube,
      rotocube) [DP]
- *** Added svnpush.py script for pushing repositories on the web [DP]
- DC  Added genmenu module and example in Tsunami [Dan Potter == DP]
- DC  Added hello-mp3 example [DP]
- DC  320x240 PAL mode [mekanaizer == MK]
- *** Fixed vqenc and kmgenc headers to be ANSI compliant [DP]
- *** New addons/ports build system [DP]
- *** Moved most addons/ports into their own tree/distribution [DP]
- *** Moved several incorrectly placed pieces into libkosutils [DP]
- *** Imported port of Lua 5.0 [DP]
- DC  Added Tsunami Matrix class [DP]
- DC  Various improvements to Tsunami classes [DP]
- *** Major build system overhaul (see RELNOTES) [DP]
- DC  Improved MII/link status handling for BBA driver [DP]
- *** Added NONE thread mode [DP]
- *** lwIP select fixes [Walter van Niftrik == WvN]
- DC  GDB stub fixes [Richard Moats == RM]
- *** New bin2c [Gil Megidish == GM]
- *** Updated genromfs [DP]
- DC  Fixed and re-enabled SPU DMA module [DP]
- DC  Cleaned up PVR DMA functions, adding support for different DMA targets [DP]
- DC  Floating point register support for the GDB stub [RM]
- DC  Added G2 DMA pausing for G2 bus read/write calls [DP]
- *** Added UDP sendto/recvfrom calls in lwIP [DP]
- DC  Added DNS client lwIP example [DP]